# Homework_Project

./: .env.example  README.md  pyproject.toml
src/: decorators.py  external_api.py  generators.py  logger.py  main.py  masks.py  processing.py  utils.py  widget.py
tests/: conftest.py  main.py  test.xlsx  test_main.py  test_utils.py
